--- a/_posts/2025-06-04-gesp-3-luogu-b3769.md
+++ b/_posts/2025-06-04-gesp-3-luogu-b3769.md
@@ -66,11 +66,11 @@ erfusuer
 
 #### 数据规模与约定
 
-以下用 $|s|$ 表示 $s$ 的长度，$|t|$ 表示 $t$ 的长度。
+以下用 $\vert s\vert$ 表示 $s$ 的长度，$\vert t\vert$ 表示 $t$ 的长度。
 
-- 对 $30\%$ 的数据，$|s| = |t| = 1$。
+- 对 $30\%$ 的数据，$\vert s\vert = \vert t\vert = 1$。
 - 对 $60\%$ 的数据，$q = 1$。
-- 对 $100\%$ 的数据，$1 \leq |s|, |t|, q \leq 10^3$，$1 \leq l_1 \leq r_1 \leq |s|$，$1 \leq l_2 \leq r_2 \leq |t|$。输入字符串仅含大小写英文字母。
+- 对 $100\%$ 的数据，$1 \leq \vert s\vert, \vert t\vert, q \leq 10^3$，$1 \leq l_1 \leq r_1 \leq \vert s\vert$，$1 \leq l_2 \leq r_2 \leq \vert t\vert$。输入字符串仅含大小写英文字母。
 
 ---
 
@@ -96,9 +96,9 @@ erfusuer
      - 每次查询截取并比较子串
 
 3. 实现要点：
-   - 字符串长度范围：$1 \leq |s|,|t| \leq 10^3$
+   - 字符串长度范围：$1 \leq \vert s\vert,\vert t\vert \leq 10^3$
    - 查询次数范围：$1 \leq q \leq 10^3$
-   - 子串范围合法：$1 \leq l_1 \leq r_1 \leq |s|$，$1 \leq l_2 \leq r_2 \leq |t|$
+   - 子串范围合法：$1 \leq l_1 \leq r_1 \leq \vert s\vert$，$1 \leq l_2 \leq r_2 \leq \vert t\vert$
    - 字符串只包含大小写英文字母
 
 **复杂度分析：**
