--- a/_posts/2025-06-07-gesp-3-luogu-p5728.md
+++ b/_posts/2025-06-07-gesp-3-luogu-p5728.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 三级]
 ---
-GESP C++三级练习，一维数组联系，难度★★☆☆☆。
+GESP C++三级练习，一维数组练习，难度★★☆☆☆。
 
 <!--more-->
 
