--- a/_posts/2025-06-11-gesp-3-luogu-b2098.md
+++ b/_posts/2025-06-11-gesp-3-luogu-b2098.md
@@ -120,6 +120,43 @@ int main() {
 }
 ```
 
+练习用vector实现
+
+```cpp
+#include <iostream>
+#include <vector>
+
+std::vector<int> ary;
+int main() {
+    // 读取输入的数字个数
+    int n;
+    std::cin >> n;
+    
+    // 将第一个数字加入向量
+    ary.push_back(n);
+    
+    // 根据规则生成数列直到得到1
+    while (n != 1) {
+        // 如果是偶数则除以2
+        if (n % 2 == 0) {
+            n /= 2;
+        } 
+        // 如果是奇数则乘3加1
+        else {
+            n = n * 3 + 1;
+        }
+        // 将新生成的数字加入向量
+        ary.push_back(n);
+    }
+    
+    // 从后向前遍历向量，输出所有数字
+    for (int i = ary.size() - 1; i >= 0; i--) {
+        std::cout << ary[i] << " ";
+    }
+    return 0;
+}
+```
+
 ---
 
 {% include custom/custom-post-content-footer.md %}
