--- a/_posts/2025-06-11-gesp-3-luogu-b2098.md
+++ b/_posts/2025-06-11-gesp-3-luogu-b2098.md
@@ -86,6 +86,9 @@ GESP C++三级练习，一维数组练习，难度★★☆☆☆。
 ```cpp
 #include <iostream>
 
+// 定义一个大小为20005的整型数组，用于存储输入的数字序列
+// 初始化所有元素为0
+// 数组大小设置为20005是为了确保能够容纳题目要求的最大输入规模(n≤20000)
 int num_array[20005] = {};
 int main() {
     // 读取输入的数字个数
@@ -126,32 +129,36 @@ int main() {
 #include <iostream>
 #include <vector>
 
-std::vector<int> ary;
+// 用于存储不重复数字的向量
+std::vector<int> num_array;
 int main() {
     // 读取输入的数字个数
     int n;
     std::cin >> n;
     
-    // 将第一个数字加入向量
-    ary.push_back(n);
-    
-    // 根据规则生成数列直到得到1
-    while (n != 1) {
-        // 如果是偶数则除以2
-        if (n % 2 == 0) {
-            n /= 2;
-        } 
-        // 如果是奇数则乘3加1
-        else {
-            n = n * 3 + 1;
+    // 遍历输入的每个数字
+    for (int i = 0; i < n; i++) {
+        // 读取当前数字
+        int num;
+        std::cin >> num;
+        
+        // 标记当前数字是否为第一次出现
+        bool flag = true;
+        
+        // 检查当前数字是否在向量中已经存在
+        for (const int& v : num_array) {
+            if (v == num) {
+                // 如果找到重复数字，设置标记为false并跳出循环
+                flag = false;
+                break;
+            }
         }
-        // 将新生成的数字加入向量
-        ary.push_back(n);
-    }
-    
-    // 从后向前遍历向量，输出所有数字
-    for (int i = ary.size() - 1; i >= 0; i--) {
-        std::cout << ary[i] << " ";
+        
+        // 如果是第一次出现的数字，则输出并添加到向量中
+        if (flag) {
+            std::cout << num << " ";
+            num_array.push_back(num);
+        }
     }
     return 0;
 }
