--- a/_posts/2025-05-13-gesp-3-luogu-b3925.md
+++ b/_posts/2025-05-13-gesp-3-luogu-b3925.md
@@ -82,7 +82,7 @@ GESP三级真题，多重循环和数学计算相关，难度★★☆☆☆。
    - 读取小猫数量N和每次扔掉的鱼的数量i
    - 确保输入数据满足题目约束条件：$0<N<10$且$i<N$
 
-2. 从小到大枚举可能的初始鱼数：
+2. 从小到大枚举可能的最后一只小猫的拿鱼数：
    - 使用一个循环，从较小的数开始尝试
    - 对于每个尝试的数，模拟N只小猫分鱼的过程
    - 记录每一步剩余的鱼数，直到最后一只小猫
@@ -113,7 +113,7 @@ int main() {
     int n, i;
     // 从标准输入读取n和i
     std::cin >> n >> i;
-    // 从1开始循环，寻找满足条件的最小鱼数
+    // 从1开始循环，寻找满足条件的最后一只小猫可能拿的最小鱼数
     for (int j = 1;; j++) {
         // flag标记是否找到满足条件的解
         bool flag = true;
@@ -122,7 +122,7 @@ int main() {
         // 模拟n只小猫分鱼的过程
         for (int k = 0; k < n; k++) {
             if (k == 0) {
-                // 第一只小猫的情况：初始鱼数 = j * n + i
+                // 最后一只小猫拿前的情况：初始鱼数 = j * n + i
                 result = j * n + i;
                 continue;
             }
