--- a/_posts/2025-06-15-gesp-4-luogu-p5729.md
+++ b/_posts/2025-06-15-gesp-4-luogu-p5729.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++三级练习 luogu-P5729 【深基5.例7】工艺品制作
+title: 【GESP】C++四级练习 luogu-P5729 【深基5.例7】工艺品制作
 date: 2025-06-15 08:00 +0800
 author: OneCoder
 comments: true
