--- a/_posts/2025-06-18-gesp-3-luogu-p1554.md
+++ b/_posts/2025-06-18-gesp-3-luogu-p1554.md
@@ -61,24 +61,26 @@ GESP C++三级练习，一维数组/字符串练习，难度★★☆☆☆。
 本题的解题思路如下：
 
 1. 问题本质：
-   - 给定一条长度为l的马路，每隔1米种一棵树
-   - 需要移除m个区间内的所有树木
-   - 计算最终剩余的树木数量
+   - 统计从M到N的所有整数中，每个数字（0-9）出现的次数
+   - 需要处理每个数字的每一位
+   - 最终输出10个数字的出现频次
 
 2. 解题关键：
-   - 使用数组记录每个位置是否有树
-   - 处理多个可能重叠的区间
-   - 统计未被移除的树木数量
+   - 有两种主要解题方法：字符串处理和数学计算
+   - 字符串法：将数字转换为字符串后逐位处理
+   - 数学法：通过取模和除法运算分离每一位
 
 3. 实现思路：
-   - 创建长度为l+1的数组，初始化所有位置为1（表示有树）
-   - 对于每个需要移除树木的区间[u,v]：
-     - 将区间内所有位置标记为0（表示移除树木）
-   - 最后遍历整个数组，统计值为1的位置数量
+   - 方法一（字符串处理）：
+     - 使用to_string()将数字转换为字符串
+     - 遍历字符串的每一位，统计数字出现次数
+   - 方法二（数学计算）：
+     - 通过不断除以10取余，分离数字的每一位
+     - 使用数组记录每个数字的出现次数
 
 4. 复杂度分析：
-   - 时间复杂度：$O(l + m \times k)$，其中k为区间平均长度
-   - 空间复杂度：$O(l)$，需要一个长度为l+1的数组
+   - 时间复杂度：$O((N-M) \times \log_{10}MAX(M,N))$
+   - 空间复杂度：$O(1)$，只需要一个固定大小为10的数组
 
 {% include custom/custom-post-content-inner.html %}
 
