--- a/_posts/2025-06-20-gesp-4-luogu-p2615.md
+++ b/_posts/2025-06-20-gesp-4-luogu-p2615.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++三级练习 luogu-P2615 [NOIP 2015 提高组] 神奇的幻方
+title: 【GESP】C++四级练习 luogu-P2615 [NOIP 2015 提高组] 神奇的幻方
 date: 2025-06-20 08:00 +0800
 author: OneCoder
 comments: true
