--- a/_posts/2025-06-30-gesp-1-luogu-b4355.md
+++ b/_posts/2025-06-30-gesp-1-luogu-b4355.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-GESP C++一级真题，基础运算和循环语句，难度★☆☆☆☆。
+GESP C++一级，2025年6月真题，基础运算和循环语句，难度★☆☆☆☆。
 
 <!--more-->
 
