--- a/_posts/2025-07-01-gesp-2-luogu-b4356.md
+++ b/_posts/2025-07-01-gesp-2-luogu-b4356.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++一级真题 luogu-B4356 [GESP202506 二级] 数三角形
+title: 【GESP】C++二级真题 luogu-B4356 [GESP202506 二级] 数三角形
 date: 2025-07-01 08:00 +0800
 author: OneCoder
 comments: true
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-GESP C++二级，2025年6月真题，基础运算和条件判断，难度★☆☆☆☆。
+GESP C++二级，2025年6月真题，多重循环，难度★✮☆☆☆。
 
 <!--more-->
 
