--- a/_posts/2025-06-26-gesp-3-luogu-p1319.md
+++ b/_posts/2025-06-26-gesp-3-luogu-p1319.md
@@ -5,7 +5,7 @@ date: 2025-06-26 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串, 位运算, 模拟]
 categories: [GESP, 三级]
 ---
 GESP C++三级练习，字符串/位运算，难度★★☆☆☆。
