--- a/_posts/2025-06-30-gesp-1-luogu-b4354.md
+++ b/_posts/2025-06-30-gesp-1-luogu-b4354.md
@@ -5,8 +5,8 @@ date: 2025-06-30 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
-categories: [GESP, 一级]
+tags: [GESP, C++, 基础语句]
+categories: [GESP, 一级, 基础运算]
 ---
 GESP C++一级，2025年6月真题，基础运算和条件判断，难度★☆☆☆☆。
 
