--- a/_posts/2025-07-01-gesp-2-luogu-b4356.md
+++ b/_posts/2025-07-01-gesp-2-luogu-b4356.md
@@ -5,7 +5,7 @@ date: 2025-07-01 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP C++二级，2025年6月真题，多重循环，难度★✮☆☆☆。
