--- a/_posts/2025-06-30-gesp-1-luogu-b4355.md
+++ b/_posts/2025-06-30-gesp-1-luogu-b4355.md
@@ -5,7 +5,7 @@ date: 2025-06-30 08:30 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP C++一级，2025年6月真题，基础运算和循环语句，难度★☆☆☆☆。
