--- a/_posts/2025-07-01-gesp-2-luogu-b4357.md
+++ b/_posts/2025-07-01-gesp-2-luogu-b4357.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 多重循环, 数学函数]
 categories: [GESP, 二级]
 ---
-GESP C++二级，2025年6月真题，多重循环，难度★✮☆☆☆。
+GESP C++二级，2025年6月真题，多重循环，难度★✮☆☆☆。个人认为，对于低年级的2级考生来说，相对较难。
 
 <!--more-->
 
