add tags & change summary

--- a/_posts/2025-04-30-gesp-3-luogu-b3842.md
+++ b/_posts/2025-04-30-gesp-3-luogu-b3842.md
@@ -5,10 +5,10 @@ date: 2025-04-30 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
-GESP三级真题，数组相关，难度★★☆☆☆。
+GESP三级真题，一维数组相关，难度★★☆☆☆。
 
 <!--more-->
 
