--- a/_posts/2025-05-05-gesp-3-luogu-b3848.md
+++ b/_posts/2025-05-05-gesp-3-luogu-b3848.md
@@ -5,7 +5,7 @@ date: 2025-05-05 21:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级模拟样题，一维数组相关，难度★★✮☆☆。
