--- a/_posts/2025-05-06-gesp-3-luogu-b3849.md
+++ b/_posts/2025-05-06-gesp-3-luogu-b3849.md
@@ -5,7 +5,7 @@ date: 2025-05-06 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串, 进制转换]
 categories: [GESP, 三级]
 ---
 GESP三级模拟样题，字符串和进制转换相关，难度★★✮☆☆。
