--- a/_posts/2025-05-13-gesp-3-luogu-b3925.md
+++ b/_posts/2025-05-13-gesp-3-luogu-b3925.md
@@ -5,7 +5,7 @@ date: 2025-05-13 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环, 模拟算法]
 categories: [GESP, 三级]
 ---
 GESP三级真题，多重循环和数学计算相关，难度★★☆☆☆。
