--- a/_posts/2025-05-27-gesp-3-luogu-b4262.md
+++ b/_posts/2025-05-27-gesp-3-luogu-b4262.md
@@ -5,7 +5,7 @@ date: 2025-05-27 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级真题，字符串相关问题，对于三级来说有一定难度，难度★★★☆☆。
