--- a/_posts/2025-07-02-gesp-3-luogu-b4359.md
+++ b/_posts/2025-07-02-gesp-3-luogu-b4359.md
@@ -8,7 +8,8 @@ math: true
 tags: [GESP, C++, 模拟算法]
 categories: [GESP, 三级]
 ---
-GESP C++三级，2025年6月真题，进制转换，难度★★☆☆☆。
+GESP C++三级，2025年6月真题，模拟算法，难度★★☆☆☆。
+本次三级题目个人感觉比较简单。
 
 <!--more-->
 
