--- a/_posts/2025-05-12-gesp-3-luogu-b3868.md
+++ b/_posts/2025-05-12-gesp-3-luogu-b3868.md
@@ -5,7 +5,7 @@ date: 2025-05-12 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组, 字符串]
 categories: [GESP, 三级]
 ---
 GESP三级真题，字符串和一维数组相关，难度★★☆☆☆。
