--- a/_posts/2025-05-17-gesp-3-luogu-b3957.md
+++ b/_posts/2025-05-17-gesp-3-luogu-b3957.md
@@ -5,7 +5,7 @@ date: 2025-05-17 11:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级真题，字符串和一维数组相关题目，难度★★☆☆☆。
