--- a/_posts/2025-05-20-gesp-3-luogu-b4038.md
+++ b/_posts/2025-05-20-gesp-3-luogu-b4038.md
@@ -5,7 +5,7 @@ date: 2025-05-20 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级真题，一维数组相关题目，难度★★☆☆☆。
