--- a/_posts/2025-05-24-gesp-3-luogu-b4067.md
+++ b/_posts/2025-05-24-gesp-3-luogu-b4067.md
@@ -5,7 +5,7 @@ date: 2025-05-24 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串]
 categories: [GESP, 三级]
 ---
 GESP三级真题，字符串相关题目，难度★★☆☆☆。
