--- a/_posts/2025-05-26-gesp-3-luogu-b4261.md
+++ b/_posts/2025-05-26-gesp-3-luogu-b4261.md
@@ -5,7 +5,7 @@ date: 2025-05-26 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 位运算]
 categories: [GESP, 三级]
 ---
 GESP三级真题，位运算相关问题，难度★★☆☆☆。
