--- a/_posts/2024-11-14-gesp-3-luogu-b2064.md
+++ b/_posts/2024-11-14-gesp-3-luogu-b2064.md
@@ -5,7 +5,7 @@ date: 2024-11-14 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 斐波那契数列本身可能并不一定涉及数组知识点，但本题中要求的输入、输出格式涉及到三级知识点一维数组的使用。
