change post b2064 add link

--- a/_posts/2024-11-14-gesp-3-luogu-b2064.md
+++ b/_posts/2024-11-14-gesp-3-luogu-b2064.md
@@ -13,7 +13,7 @@ categories: [GESP, 三级]
 
 <!--more-->
 
-## luogu-B2064
+## [luogu-B2064 斐波那契数列](https://www.luogu.com.cn/problem/B2064)
 
 ### 题目要求
 
