--- a/_posts/2025-05-13-gesp-3-luogu-b3925.md
+++ b/_posts/2025-05-13-gesp-3-luogu-b3925.md
@@ -28,7 +28,7 @@ GESP三级真题，多重循环和数学计算相关，难度★★☆☆☆。
 
 >总共 $2$ 行。第一行一个整数 $N$，第二行一个整数 $i$。
 >
->保证 $0<N<10$；$i<N$ 。
+>保证 $0 \lt N \lt 10$；$i \lt N$ 。
 
 #### 输出格式
 
@@ -80,7 +80,7 @@ GESP三级真题，多重循环和数学计算相关，难度★★☆☆☆。
 
 1. 读取输入数据：
    - 读取小猫数量N和每次扔掉的鱼的数量i
-   - 确保输入数据满足题目约束条件：$0<N<10$且$i<N$
+   - 确保输入数据满足题目约束条件：$0 \lt N \lt 10$ 且 $i \lt N$
 
 2. 从小到大枚举可能的最后一只小猫的拿鱼数：
    - 使用一个循环，从较小的数开始尝试
