add some tags to 5 old posts

--- a/_posts/2024-09-10-gesp-1-bcqm3001-3004.md
+++ b/_posts/2024-09-10-gesp-1-bcqm3001-3004.md
@@ -5,7 +5,7 @@ date: 2024-09-10 21:17 +0800
 author: OneCoder
 image: /images/post/gesp/3001-3004.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 四道启蒙基础题，练习基本输出语句cout。
