--- a/_posts/2024-09-15-gesp-1-bcqm3006.md
+++ b/_posts/2024-09-15-gesp-1-bcqm3006.md
@@ -5,7 +5,7 @@ date: 2024-09-15 15:00 +0800
 author: OneCoder
 image: /images/post/gesp/3006.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 多行输出练习题，使用`cout`或`printf`函数输出多行内容。
@@ -117,7 +117,7 @@ int main() {
 }
 ```
 
-> 其实我在初看本题的时候，我以为是根据规律利用ASCII码输出，这样可以实现出任意 N * M 的图形的效果。但是觉得这个阶段对于一个初学者来说难度有点大。所以，我猜测出题者的本意就是我上面分析的意思。于是我让我的孩子实现了上述三种方法。如果你能力足够，建议可以按照N * M的方式练习一下。
+> 其实我在初看本题的时候，我以为是根据规律利用ASCII码输出，这样可以实现出任意 $N \times M$ 的图形的效果。但是觉得这个阶段对于一个初学者来说难度有点大。所以，我猜测出题者的本意就是我上面分析的意思。于是我让我的孩子实现了上述三种方法。如果你能力足够，建议可以按照$N \times M$的方式练习一下。
 {: .prompt-tip }
 
 ---
