--- a/_posts/2024-09-16-gesp-1-bcqm3007.md
+++ b/_posts/2024-09-16-gesp-1-bcqm3007.md
@@ -5,7 +5,8 @@ date: 2024-09-16 23:00 +0800
 author: OneCoder
 image: /images/post/gesp/3007.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
+
 categories: [GESP, 一级]
 ---
 多行输出练习题，区别仅是输出内容为中文。程序没什么不同，顺便科普一点编码知识。
