--- a/_posts/2024-09-11-gesp-1-bcqm3005.md
+++ b/_posts/2024-09-11-gesp-1-bcqm3005.md
@@ -5,7 +5,7 @@ date: 2024-09-11 22:11 +0800
 author: OneCoder
 image: /images/post/gesp/3005.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++，基础语句]
 categories: [GESP, 一级]
 ---
 一道基础练习题，练习基本输出语句`printf`。
