--- a/_posts/2024-09-17-gesp-1-bcqm3008.md
+++ b/_posts/2024-09-17-gesp-1-bcqm3008.md
@@ -5,7 +5,7 @@ date: 2024-09-17 09:00 +0800
 author: OneCoder
 image: /images/post/gesp/3008.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 跟[BCQM3005](https://www.coderli.com/gesp-1-bcqm3005/)一样，都是printf的格式化输出练习题。不过从题目描述过程来看，审题过程比题目本身更重要。
