add tags to post b3661

--- a/_posts/2024-11-18-gesp-3-luogu-b3661.md
+++ b/_posts/2024-11-18-gesp-3-luogu-b3661.md
@@ -5,14 +5,14 @@ date: 2024-11-18 21:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 三级知识点一维数组练习，除了应用了数组以外，其余逻辑比较简单，适合初学者。
 
 <!--more-->
 
-## luogu-B3661
+## [luogu-B3661 [语言月赛202209] 排排队](https://www.luogu.com.cn/problem/B3661)
 
 ### 题目要求
 
