--- a/_posts/2025-05-14-gesp-3-luogu-b3926.md
+++ b/_posts/2025-05-14-gesp-3-luogu-b3926.md
@@ -12,7 +12,7 @@ GESP三级真题，字符串相关题目，难度★★☆☆☆。
 
 <!--more-->
 
-## luogu-B3926 [GESP202312 三级] 单位转换
+## [luogu-B3926 [GESP202312 三级] 单位转换](https://www.luogu.com.cn/problem/B3926)
 
 ### 题目要求
 
