fix some latex format and add some links

--- a/_posts/2025-05-21-gesp-3-luogu-b4039.md
+++ b/_posts/2025-05-21-gesp-3-luogu-b4039.md
@@ -85,7 +85,7 @@ No
 
 **复杂度分析：**
 
-- 时间复杂度：$O(n \times l^2)$，其中n是字符串数量，l是字符串长度。对每个字符串需要尝试O(l)个分割点，每次判断回文需要O(l)时间
+- 时间复杂度：$O(n \times l^2)$，其中n是字符串数量，l是字符串长度。对每个字符串需要尝试$O(l)$个分割点，每次判断回文需要$O(l)$时间
 - 空间复杂度：$O(l)$，需要存储子串
 
 {% include custom/custom-post-content-inner.html %}
