--- a/_posts/2025-05-24-gesp-3-luogu-b4067.md
+++ b/_posts/2025-05-24-gesp-3-luogu-b4067.md
@@ -69,20 +69,20 @@ GESP三级真题，字符串相关题目，难度★★☆☆☆。
 本题的解题思路如下：
 
 1. 输入处理：
-   - 读取一个数字n作为输入
+   - 读取一个数字 $n$ 作为输入
    - 将数字转换为字符串，方便逐位处理
 
 2. 核心逻辑：
-   - 预定义0-3这4个数字在5×5网格中的显示样式
+   - 预定义 $0-3$ 这 $4$ 个数字在 $5\times5$ 网格中的显示样式
    - 按行处理输出：
      - 对于每一行，遍历输入数字的每一位
      - 根据当前数字和当前行号，输出对应的显示样式
    - 每行处理完成后换行
 
 3. 输出格式：
-   - 每个数字占用5×5的网格空间
+   - 每个数字占用 $5\times5$ 的网格空间
    - 数字之间没有间隔
-   - 共输出5行
+   - 共输出 $5$ 行
 
 **复杂度分析：**
 
