--- a/_posts/2025-05-26-gesp-3-luogu-b4261.md
+++ b/_posts/2025-05-26-gesp-3-luogu-b4261.md
@@ -66,28 +66,28 @@ $$(x \ \operatorname{and} \ y) + (x \ \operatorname{or} \ y) = 2025$$
 本题的解题思路如下：
 
 1. 问题分析：
-   - 给定一个整数x，需要找到最小的正整数y
-   - 满足条件：(x AND y) + (x OR y) = 2025
-   - x的范围是[0, 2025)
+   - 给定一个整数 $x$，需要找到最小的正整数 $y$
+   - 满足条件：$(x \ \operatorname{and} \ y) + (x \ \operatorname{or} \ y) = 2025$
+   - $x$ 的范围是 $[0, 2025)$
 
 2. 核心逻辑：
-   - 从最小的正整数开始尝试，直到找到满足条件的y
-   - 使用位运算计算AND和OR的结果
-   - 判断两个运算结果之和是否等于2025
-   - 如果找到满足条件的y则立即返回
-   - 如果遍历到2025仍未找到，则返回-1
+   - 从最小的正整数开始尝试，直到找到满足条件的 $y$
+   - 使用位运算计算 $\operatorname{and}$ 和 $\operatorname{or}$ 的结果
+   - 判断两个运算结果之和是否等于 $2025$
+   - 如果找到满足条件的 $y$ 则立即返回
+   - 如果遍历到 $2025$ 仍未找到，则返回 $-1$
 
 3. 实现要点：
-   - 使用位运算符&计算AND
-   - 使用位运算符|计算OR
-   - y的取值范围需要考虑以下几点：
-     - y必须是正整数
-     - y的上限不需要超过2025，因为题目要求和为2025
-     - 考虑到位运算的特性，y的值不可能大于2025。因为：
+   - 使用位运算符 $\&$ 计算 $\operatorname{and}$
+   - 使用位运算符 $|$ 计算 $\operatorname{or}$
+   - $y$ 的取值范围需要考虑以下几点：
+     - $y$ 必须是正整数
+     - $y$ 的上限不需要超过 $2025$，因为题目要求和为 $2025$
+     - 考虑到位运算的特性，$y$ 的值不可能大于 $2025$。因为：
        1. 对于任意两个数的按位与运算结果一定小于等于这两个数中的较小值
        2. 对于任意两个数的按位或运算结果一定大于等于这两个数中的较大值
-       3. 已知x < 2025，如果y > 2025，则x & y < 2025且x | y > 2025
-       4. 这样(x & y) + (x | y)必然大于2025，与题目要求不符
+       3. 已知 $x < 2025$，如果 $y > 2025$，则 $x \ \& \ y < 2025$ 且 $x \ | \ y > 2025$
+       4. 这样 $(x \ \& \ y) + (x \ | \ y)$ 必然大于 $2025$，与题目要求不符
    - 注意及时退出循环以提高效率
 
 **复杂度分析：**
