add 5 posts tags

--- a/_posts/2024-09-18-gesp-1-bcqm3010-3012-3019.md
+++ b/_posts/2024-09-18-gesp-1-bcqm3010-3012-3019.md
@@ -5,7 +5,7 @@ date: 2024-09-18 20:00 +0800
 author: OneCoder
 image: /images/post/gesp/3010.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++,基础语句]
 categories: [GESP, 一级]
 ---
 三道交换两个变量值的题目。从给定值到读取输入循序渐进，可以一起练习。
