--- a/_posts/2024-09-19-gesp-1-bcqm3011.md
+++ b/_posts/2024-09-19-gesp-1-bcqm3011.md
@@ -5,7 +5,7 @@ date: 2024-09-19 20:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++,基础语句]
 categories: [GESP, 一级]
 ---
 一道简单的数学应用题。自己列算式然后按要求的格式输出。
