--- a/_posts/2024-09-19-gesp-1-bcqm3013-3014.md
+++ b/_posts/2024-09-19-gesp-1-bcqm3013-3014.md
@@ -5,7 +5,7 @@ date: 2024-09-19 20:50 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++,基础语句]
 categories: [GESP, 一级]
 ---
 两道会用到for循环的题。从启蒙开始第一次接触for循环。
