--- a/_posts/2024-09-23-gesp-1-bcqm3016.md
+++ b/_posts/2024-09-23-gesp-1-bcqm3016.md
@@ -5,7 +5,7 @@ date: 2024-09-23 10:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++,基础语句]
 categories: [GESP, 一级]
 ---
 变量值读取练习，开始接触从控制台读取变量的值。（之前的[BCQM3019](https://www.coderli.com/gesp-1-bcqm3010-3012-3019/)]其实已经用过，但是如果按顺序的话，这是第一次接触）
