--- a/_posts/2024-09-17-gesp-1-bcqm3009.md
+++ b/_posts/2024-09-17-gesp-1-bcqm3009.md
@@ -5,7 +5,7 @@ date: 2024-09-17 18:00 +0800
 author: OneCoder
 image: /images/post/gesp/3009.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一道简单的二进制字符串输出题。初识二进制数字规律，人肉计算后输出。
