--- a/_posts/2024-09-23-gesp-1-bcqm3017-3018.md
+++ b/_posts/2024-09-23-gesp-1-bcqm3017-3018.md
@@ -5,7 +5,7 @@ date: 2024-09-23 22:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++,基础语句]
 categories: [GESP, 一级]
 ---
 接触输入后，两道简单的读取输入后，按要求输出的变量值的题。基本语法的应用，没什么难度。
