--- a/_posts/2024-09-24-gesp-1-bcqm3020.md
+++ b/_posts/2024-09-24-gesp-1-bcqm3020.md
@@ -5,7 +5,7 @@ date: 2024-09-24 22:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++,基础语句]
 categories: [GESP, 一级]
 ---
 稍微增加了一点点难度，输入后，根据题目要求进行计算，然后按要求输出结果。即跟之前的题([***BCQM3017-3018***](https://www.coderli.com/gesp-1-bcqm3017-3018/))比起来多了计算环节，计算就小学应用题水平。
