--- a/_posts/2024-09-26-gesp-1-bcqm3022.md
+++ b/_posts/2024-09-26-gesp-1-bcqm3022.md
@@ -5,7 +5,7 @@ date: 2024-09-26 21:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++,基础语句]
 categories: [GESP, 一级]
 ---
 题型与[***BCQM3021***](https://www.coderli.com/gesp-1-bcqm3021/)一样，只是中间计算逻辑不同，巩固练习。
