add 5 posts tags

--- a/_posts/2024-09-27-gesp-1-bcqm3023.md
+++ b/_posts/2024-09-27-gesp-1-bcqm3023.md
@@ -5,7 +5,7 @@ date: 2024-09-27 08:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 题型与[***BCQM3022***](https://www.coderli.com/gesp-1-bcqm3022/)一样，只是中间计算逻辑略增加点难度，巩固练习。
@@ -57,7 +57,7 @@ int main() {
 }
 ```
 
-> 需要注意的是：这里用到了乘法计算，理论上说是需要关注一下数据范围的。尤其是如果你定义一个变量来保存计算结果的话，那么这个变量是用int还是long long就需要注意一下。int最大能保存约20亿左右的数字，显然在本题1000以下的数据范围，最大级别1000 * 1000 * 1000 = 10亿，还是够用的。
+> 需要注意的是：这里用到了乘法计算，理论上需要关注数据范围。特别是当定义变量存储计算结果时，需要考虑使用 `int` 还是 `long long` 类型。`int` 类型最大可以存储约 $2 \times 10^9$ (20亿)的数字，而本题中数据范围不超过1000，最大计算结果为 $1000 \times 1000 \times 1000 = 10^9$ (10亿)，因此使用 `int` 类型足够。
 {: .prompt-warning }
 
 ---
