--- a/_posts/2024-09-28-gesp-1-bcqm3024.md
+++ b/_posts/2024-09-28-gesp-1-bcqm3024.md
@@ -5,7 +5,7 @@ date: 2024-09-28 17:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 题型与[***BCQM3023***](https://www.coderli.com/gesp-1-bcqm3023/)一样，只是中间计算逻辑不同，而且计算逻辑似乎还变简单了，不过多了点细节要求而已，作为巩固练习。
