--- a/_posts/2024-09-29-gesp-1-bcqm3025.md
+++ b/_posts/2024-09-29-gesp-1-bcqm3025.md
@@ -6,7 +6,7 @@ date: 2024-09-29 08:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 题型与[***BCQM3024***](https://www.coderli.com/gesp-1-bcqm3024/)一样，计算逻辑上稍微复杂了一点点，代码逻辑没变，仍属于小学3，4年级的题目水平。
