--- a/_posts/2024-09-29-gesp-1-bcqm3027.md
+++ b/_posts/2024-09-29-gesp-1-bcqm3027.md
@@ -6,7 +6,7 @@ date: 2024-09-29 21:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一道没有计算直接输入后，按格式化输出的题。更基础了，巩固练习。
