--- a/_posts/2024-09-29-gesp-1-bcqm3026.md
+++ b/_posts/2024-09-29-gesp-1-bcqm3026.md
@@ -6,7 +6,7 @@ date: 2024-09-29 18:30 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 题型与[***BCQM3025***](https://www.coderli.com/gesp-1-bcqm3025/)一样，计算难度却大大降低，回到了一年级水平。巩固程序练习。
