add 5 posts tags

--- a/_posts/2024-09-30-gesp-1-bcqm3028.md
+++ b/_posts/2024-09-30-gesp-1-bcqm3028.md
@@ -6,7 +6,7 @@ date: 2024-09-30 08:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 目前的几道题主要围绕浮点型的计算和格式化输出。强化基础语法练习。
