--- a/_posts/2024-10-01-gesp-1-bcqm3031.md
+++ b/_posts/2024-10-01-gesp-1-bcqm3031.md
@@ -6,7 +6,7 @@ date: 2024-10-01 20:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 浮点数计算+数位保留练习，%m.nf知识点，已在[BCQM3027](https://www.coderli.com/gesp-1-bcqm3027/)中详细介绍。
