--- a/_posts/2024-09-30-gesp-1-bcqm3029.md
+++ b/_posts/2024-09-30-gesp-1-bcqm3029.md
@@ -6,7 +6,7 @@ date: 2024-09-30 20:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 还是输入-计算-输出类型的题目，但需要考虑变量的数据类型，严格来说可以属于出题不严谨，却意外的可以考虑思维的严谨性。
