--- a/_posts/2024-09-30-gesp-1-bcqm3030.md
+++ b/_posts/2024-09-30-gesp-1-bcqm3030.md
@@ -6,7 +6,7 @@ date: 2024-09-30 21:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 浮点数数位保留练习，%m.nf知识点，已在[BCQM3027](https://www.coderli.com/gesp-1-bcqm3027/)中详细介绍。
