--- a/_posts/2024-10-02-gesp-1-bcqm3032.md
+++ b/_posts/2024-10-02-gesp-1-bcqm3032.md
@@ -6,7 +6,7 @@ date: 2024-10-02 20:00 +0800
 author: OneCoder
 image: /images/post/gesp/3032.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 浮点数计算。看图列算式，小学思维，甚至没有输入的一道题。
