update six posts tags

--- a/_posts/2024-10-03-gesp-1-bcqm3033.md
+++ b/_posts/2024-10-03-gesp-1-bcqm3033.md
@@ -6,7 +6,7 @@ date: 2024-10-03 20:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 应该算第一道对小学生来说，计算逻辑稍微复杂一点的题目。多定义几个变量可能对解题过程更有帮助。
