--- a/_posts/2024-10-07-gesp-1-bcqm3037.md
+++ b/_posts/2024-10-07-gesp-1-bcqm3037.md
@@ -6,7 +6,7 @@ date: 2024-10-07 14:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 又回到了简单计算的题目，继续巩固练习。
