--- a/_posts/2024-10-07-gesp-1-bcqm3038.md
+++ b/_posts/2024-10-07-gesp-1-bcqm3038.md
@@ -6,7 +6,7 @@ date: 2024-10-07 22:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一道计算分数的浮点数值的题，按要求保留小数点后位数。是从整数到小数的计算转换，也算对[`%m.nf`](https://www.coderli.com/gesp-1-bcqm3027/)知识点的巩固练习。
