--- a/_posts/2024-10-04-gesp-1-bcqm3034.md
+++ b/_posts/2024-10-04-gesp-1-bcqm3034.md
@@ -6,7 +6,7 @@ date: 2024-10-04 22:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一道又回到简单浮点数计算水平的题，巩固基本语法练习。
