--- a/_posts/2024-10-05-gesp-1-bcqm3035.md
+++ b/_posts/2024-10-05-gesp-1-bcqm3035.md
@@ -6,7 +6,7 @@ date: 2024-10-05 22:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 浮点数计算，求球的体积。
