--- a/_posts/2024-10-06-gesp-1-bcqm3036.md
+++ b/_posts/2024-10-06-gesp-1-bcqm3036.md
@@ -6,7 +6,7 @@ date: 2024-10-06 21:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 两位数数位交换的题，终于换了一种题型。对小学生来说需要稍微动动脑筋了。
