update 5 posts tags

--- a/_posts/2024-10-08-gesp-1-bcqm3040.md
+++ b/_posts/2024-10-08-gesp-1-bcqm3040.md
@@ -6,7 +6,7 @@ date: 2024-10-08 13:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 到目前为止，应该是第一道可能需要用到`if`语句的题目（后来发现也可以不用），也算刚刚接近GESP 1级真题水平的题目，值得一做。
