--- a/_posts/2024-10-08-gesp-1-bcqm3041.md
+++ b/_posts/2024-10-08-gesp-1-bcqm3041.md
@@ -6,7 +6,7 @@ date: 2024-10-08 15:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 进入字符类型(`char`)的变量练习，按格式要求输出给定字符。
