--- a/_posts/2024-10-09-gesp-1-bcqm3044.md
+++ b/_posts/2024-10-09-gesp-1-bcqm3044.md
@@ -6,7 +6,7 @@ date: 2024-10-09 22:10 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v3.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 回到一级知识点，用给定字符按指定形状输出。
