--- a/_posts/2024-10-09-gesp-2-bcqm3042.md
+++ b/_posts/2024-10-09-gesp-2-bcqm3042.md
@@ -6,7 +6,7 @@ date: 2024-10-09 15:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, ASCII]
 categories: [GESP, 二级]
 ---
 没看错二级题，因为ASCII码在GESP大纲中是二级部分的内容，大纲中第5条要求：
