--- a/_posts/2024-10-08-gesp-1-bcqm3039.md
+++ b/_posts/2024-10-08-gesp-1-bcqm3039.md
@@ -6,7 +6,7 @@ date: 2024-10-08 08:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 整数求商和余数的计算练习。练习求商和余数的方法。
