add five posts tags

--- a/_posts/2024-10-10-gesp-1-bcqm3048.md
+++ b/_posts/2024-10-10-gesp-1-bcqm3048.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3048，顺序执行、逆推运算
 date: 2024-10-10 23:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一道根据结果，一步一步逆推之前结果的题，完全顺序语句执行。
