--- a/_posts/2024-10-10-gesp-2-bcqm3045.md
+++ b/_posts/2024-10-10-gesp-2-bcqm3045.md
@@ -4,7 +4,7 @@ title: 【GESP】C++二级练习BCQM3045，打印ASCII码
 date: 2024-10-10 12:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, ASCII]
 categories: [GESP, 二级]
 ---
 还是跟ASCII码有关的二级题目，输出字符对应的ASCII码数字
