--- a/_posts/2024-10-09-gesp-2-bcqm3043.md
+++ b/_posts/2024-10-09-gesp-2-bcqm3043.md
@@ -6,7 +6,7 @@ date: 2024-10-09 22:00 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-2.png
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, ASCII]
 categories: [GESP, 二级]
 ---
 还是跟ASCII码有关的二级题目，大小写转换。
