--- a/_posts/2024-10-10-gesp-1-bcqm3047.md
+++ b/_posts/2024-10-10-gesp-1-bcqm3047.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3047，浮点计算，四舍五入
 date: 2024-10-10 20:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 回到一级浮点数计算的题，不过这次多了一个小小的难点就是到十位的四舍五入。需要自己处理一下。
