--- a/_posts/2024-10-10-gesp-2-bcqm3046.md
+++ b/_posts/2024-10-10-gesp-2-bcqm3046.md
@@ -4,7 +4,7 @@ title: 【GESP】C++二级练习BCQM3046，简单加密
 date: 2024-10-10 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, ASCII]
 categories: [GESP, 二级]
 ---
 还是跟ASCII码有关的二级题目，简单的字符固定错位加密方法。
