add 5 posts tags

--- a/_posts/2024-10-11-gesp-1-bcqm3049.md
+++ b/_posts/2024-10-11-gesp-1-bcqm3049.md
@@ -5,7 +5,7 @@ date: 2024-10-11 21:00 +0800
 author: OneCoder
 comments: true
 tags: [GESP, C++]
-categories: [GESP, 一级]
+categories: [GESP, 一级, 基础语句]
 ---
 GESP一级知识点整形`int`和`for`循环练习。
 
