--- a/_posts/2024-10-12-gesp-1-bcqm3053.md
+++ b/_posts/2024-10-12-gesp-1-bcqm3053.md
@@ -5,7 +5,7 @@ date: 2024-10-12 23:00 +0800
 author: OneCoder
 comments: true
 tags: [GESP, C++]
-categories: [GESP, 一级]
+categories: [GESP, 一级, 基础语句, 数学运算]
 ---
 其实之前做两位数数字交换时([BCQM3036](https://www.coderli.com/gesp-1-bcqm3036/))，我给孩子拓展的一道题，一模一样。
 
