--- a/_posts/2024-10-12-gesp-2-bcqm3051.md
+++ b/_posts/2024-10-12-gesp-2-bcqm3051.md
@@ -4,7 +4,7 @@ title: 【GESP】C++二级练习BCQM3051，浮点数余数
 date: 2024-10-12 12:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 数据类型转换]
 categories: [GESP, 二级]
 ---
 我理解为GESP二级知识点：数据类型转换-隐式数据类型转换题目。
