--- a/_posts/2024-10-12-gesp-1-bcqm3052.md
+++ b/_posts/2024-10-12-gesp-1-bcqm3052.md
@@ -5,7 +5,7 @@ date: 2024-10-12 12:20 +0800
 author: OneCoder
 comments: true
 tags: [GESP, C++]
-categories: [GESP, 一级]
+categories: [GESP, 一级, 基础语句]
 ---
 GESP一级知识点：`for`循环和`if`的应用。
 
