add 5 posts tags

--- a/_posts/2024-10-13-gesp-1-bcqm3054.md
+++ b/_posts/2024-10-13-gesp-1-bcqm3054.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3054，温度表达转化
 date: 2024-10-13 19:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点：浮点数、整数运算+格式化输出知识点的应用。
