--- a/_posts/2024-10-13-gesp-1-bcqm3080.md
+++ b/_posts/2024-10-13-gesp-1-bcqm3080.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3080，布尔型转换
 date: 2024-10-13 10:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点布尔型变量起步。题号看起来跳跃，但是知识点是连贯的，目前阶段思路是选择考试大纲中一级的知识点进行练习。
