--- a/_posts/2024-10-14-gesp-1-bcqm3081.md
+++ b/_posts/2024-10-14-gesp-1-bcqm3081.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3081，偶数
 date: 2024-10-14 08:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`if`分支语句和取余操作`%`的应用练习。
