update 5 posts tags

--- a/_posts/2024-10-14-gesp-1-bcqm3084.md
+++ b/_posts/2024-10-14-gesp-1-bcqm3084.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3084，智商问题
 date: 2024-10-14 21:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 还是GESP一级知识点`if`分支语句练习。
