--- a/_posts/2024-10-14-gesp-1-bcqm3143.md
+++ b/_posts/2024-10-14-gesp-1-bcqm3143.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3143，重要的话说 n 遍
 date: 2024-10-14 22:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 看题目就应该大概猜到是GESP一级知识点`for`循环语句练习，最最基础的练习开始。
