--- a/_posts/2024-10-15-gesp-2-bcqm3144.md
+++ b/_posts/2024-10-15-gesp-2-bcqm3144.md
@@ -4,7 +4,7 @@ title: 【GESP】C++二级练习BCQM3144，26个字母输出
 date: 2024-10-15 08:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, ASCII]
 categories: [GESP, 二级]
 ---
 一级知识点`for`循环的应用+二级知识点`ASCII`码应用的题目，因此归类为二级题目。没什么难度，遇到了就做了，主要为了练习`for`循环。
