--- a/_posts/2024-10-16-gesp-1-bcqm3055.md
+++ b/_posts/2024-10-16-gesp-1-bcqm3055.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3055，4位数间隔输出
 date: 2024-10-16 08:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点取余、整除运算和格式化输出知识点应用。其实也可以用`string`去处理，那就属于GESP三级的知识点范畴了，孩子暂未涉及。
