--- a/_posts/2024-10-15-gesp-1-bcqm3145.md
+++ b/_posts/2024-10-15-gesp-1-bcqm3145.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3145，奇数求和
 date: 2024-10-15 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点`for`循环分和支语句`if`的应用的练习题。难度不大，综合性略微提升，感觉接近但略低于一级真题水平。
