update 5 posts tags from bcqm3085-3146

--- a/_posts/2024-10-16-gesp-1-bcqm3085.md
+++ b/_posts/2024-10-16-gesp-1-bcqm3085.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3085，最大的数
 date: 2024-10-16 19:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 还是GESP一级知识点`if`分支语句练习。之前做过类似的问题[BCQM3082,最大数输出](https://www.coderli.com/gesp-1-bcqm3082/)，本题的变化也是只是变量类型不同，顺手做了，也顺便学了另外一种解法。
