--- a/_posts/2024-10-16-gesp-1-bcqm3086.md
+++ b/_posts/2024-10-16-gesp-1-bcqm3086.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3086，判断数正负
 date: 2024-10-16 20:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`if`分支语句练习，逻辑简单。
