--- a/_posts/2024-10-16-gesp-1-bcqm3087.md
+++ b/_posts/2024-10-16-gesp-1-bcqm3087.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3087，判断灯开关
 date: 2024-10-16 21:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`if`分支语句练习，增加了计算逻辑。
