--- a/_posts/2024-10-17-gesp-1-bcqm3146.md
+++ b/_posts/2024-10-17-gesp-1-bcqm3146.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3146，老狼老狼
 date: 2024-10-17 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`for`循环语句练习，基础起步练习题。
