update 5 posts tags

--- a/_posts/2024-10-17-gesp-1-bcqm3147.md
+++ b/_posts/2024-10-17-gesp-1-bcqm3147.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3147，for循环求和
 date: 2024-10-17 22:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`for`循环语句练习，略微提高了一些难度。
