--- a/_posts/2024-10-20-gesp-3-bcqm3091.md
+++ b/_posts/2024-10-20-gesp-3-bcqm3091.md
@@ -4,7 +4,7 @@ title: 【GESP】C++三级练习BCQM3091，选择题判定
 date: 2024-10-20 23:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串]
 categories: [GESP, 三级]
 ---
 GESP三级字符串string和一级知识点`if-else`分支语句练习，非常基础，对于我孩子来说练习重点在一级部分，字符串只是碰巧遇到了。
