--- a/_posts/2024-10-18-gesp-1-bcqm3090.md
+++ b/_posts/2024-10-18-gesp-1-bcqm3090.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3090，奇偶数判断
 date: 2024-10-18 22:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`if-else`分支语句练习，非常基础。
