--- a/_posts/2024-10-18-gesp-1-bcqm3148.md
+++ b/_posts/2024-10-18-gesp-1-bcqm3148.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3148，循环输出
 date: 2024-10-18 22:20 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`for`循环语句和输出语句，非常有趣，有意想不到的收获。
