add 5 posts tags

--- a/_posts/2024-10-21-gesp-1-bcqm3056.md
+++ b/_posts/2024-10-21-gesp-1-bcqm3056.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3056，等差数列末项计算
 date: 2024-10-21 21:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点简单运算练习，难点对于小学生来说反而在于是否知道等差数列。
