--- a/_posts/2024-10-22-gesp-1-bcqm3149.md
+++ b/_posts/2024-10-22-gesp-1-bcqm3149.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3149，重复说话
 date: 2024-10-22 12:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`for`循环语句和输出语句，非常简单。
