--- a/_posts/2024-10-22-gesp-1-luogu-b3846.md
+++ b/_posts/2024-10-22-gesp-1-luogu-b3846.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习luogu-B3846，闰年求和
 date: 2024-10-22 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`for`循环和`if`分支判断语句的练习，个人认为接近一级真题难度的题，对于**闰年的判断**和**定义变量来求和**对于初学者是个小小的难点。
