--- a/_posts/2024-10-23-gesp-1-bcqm3092.md
+++ b/_posts/2024-10-23-gesp-1-bcqm3092.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级练习BCQM3092，双面打印
 date: 2024-10-23 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点`if`分支语句和取余、整除操作练习。比较简单。
