--- a/_posts/2024-10-25-gesp-1-luogu-b3835.md
+++ b/_posts/2024-10-25-gesp-1-luogu-b3835.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题练习(202303)luogu-B3835，每月天数
 date: 2024-10-25 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级真题练习。为2023年3月一级认证真题。
