--- a/_posts/2024-09-17-gesp-1-bcqm3009.md
+++ b/_posts/2024-09-17-gesp-1-bcqm3009.md
@@ -12,7 +12,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3009
+## BCQM3009-简单二进制字符串输出
 
 ### 题目要求
 
@@ -114,33 +114,33 @@ categories: [GESP, 一级]
 ##### （4）**二进制和十进制的转换**
 
 - 我们平常用的**十进制**是基于10的。举个例子，数字**345**表示：
-  - 3在百位（3×10^2 = 300）
-  - 4在十位（4×10^1 = 40）
-  - 5在个位（5×10^0 = 5）
+  - 3在百位（$3 \times 10^2 = 300$）
+  - 4在十位（$4 \times 10^1 = 40$）
+  - 5在个位（$5 \times 10^0 = 5$）
   
-   结果：**300 + 40 + 5 = 345**。
+   结果：$300 + 40 + 5 = 345$。
 
 - 而**二进制**是基于2的。例如二进制**101**表示：
-  - 1在**4**位（1×2^2 = 4）
-  - 0在**2**位（0×2^1 = 0）
-  - 1在**1**位（1×2^0 = 1）
+  - 1在**4**位（$1 \times 2^2 = 4$）
+  - 0在**2**位（$0 \times 2^1 = 0$）
+  - 1在**1**位（$1 \times 2^0 = 1$）
 
-   结果：**4 + 0 + 1 = 5**，所以二进制的**101**等于十进制的**5**。
+   结果：$4 + 0 + 1 = 5$，所以二进制的**101**等于十进制的**5**。
 
 ##### （5）**更多例子**
 
 我们来看更大的数：**二进制：1011**
 
-- 从右到左，第一位是**1**，代表**2^0 = 1**，值为**1×1 = 1**。
-- 第二位是**1**，代表**2^1 = 2**，值为**1×2 = 2**。
-- 第三位是**0**，代表**2^2 = 4**，值为**0×4 = 0**。
-- 第四位是**1**，代表**2^3 = 8**，值为**1×8 = 8**。
+- 从右到左，第一位是**1**，代表$2^0 = 1$，值为$1 \times 1 = 1$。
+- 第二位是**1**，代表$2^1 = 2$，值为$1 \times 2 = 2$。
+- 第三位是**0**，代表$2^2 = 4$，值为$0 \times 4 = 0$。
+- 第四位是**1**，代表$2^3 = 8$，值为$1 \times 8 = 8$。
 
-   最终：**8 + 0 + 2 + 1 = 11**，所以二进制的**1011**等于十进制的**11**。
+   最终：$8 + 0 + 2 + 1 = 11$，所以二进制的**1011**等于十进制的**11**。
 
 ##### 总结
 
-1. 从右往左数，每一位表示2的幂次方（从2^0开始）。
+1. 从右往左数，每一位表示2的幂次方（从$2^0$开始）。
 2. 如果该位是1，就把对应的2的幂次方加起来；如果是0，就跳过那一位。
 3. 把所有结果加在一起，得到十进制数字。
 
