--- a/_posts/2024-10-12-gesp-2-bcqm3051.md
+++ b/_posts/2024-10-12-gesp-2-bcqm3051.md
@@ -11,13 +11,13 @@ categories: [GESP, 二级]
 
 <!--more-->
 
-## BCQM3051
+## BCQM3051-浮点数余数
 
 ### 题目要求
 
 #### 描述
 
->计算两个双精度浮点数a和b的相除的余数，a和b都是双精度浮点数。这里余数（r）的定义是a=k×b+r，其中k是整数，0 ≤ r < b。
+>计算两个双精度浮点数$a$和$b$的相除的余数，$a$和$b$都是双精度浮点数。这里余数($r$)的定义是$a=k\times b+r$，其中$k$是整数，$0 \leq r < b$。
 
 #### 输入
 
@@ -25,7 +25,7 @@ categories: [GESP, 二级]
 
 #### 输出
 
->输出也仅一行，a÷b的余数。
+>输出也仅一行，$a \div b$的余数。
 
 #### 输入样例
 
@@ -39,7 +39,7 @@ categories: [GESP, 二级]
 
 ### 题目分析
 
-根据题目定义的浮点数余数计算规则，只需要根据输入先求出“商”k，然后相减即可得到余数r。这里，k只需要用a/b，然后取整即可，这就是隐式的数据类型转换，浮点数取整。
+根据题目定义的浮点数余数计算规则，只需要根据输入先求出"商"$k$，然后相减即可得到余数$r$。这里，$k$只需要用$a/b$，然后取整即可，这就是隐式的数据类型转换，浮点数取整。
 
 #### 代码参考
 
