--- a/_posts/2024-10-29-gesp-1-luogu-b3863.md
+++ b/_posts/2024-10-29-gesp-1-luogu-b3863.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题练习(202309)luogu-B3863，买文具
 date: 2024-10-29 08:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级真题练习。为2023年9月一级认证真题。属于数值计算+条件判断的问题。
