--- a/_posts/2024-10-26-gesp-1-luogu-b3834.md
+++ b/_posts/2024-10-26-gesp-1-luogu-b3834.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题练习(202303)luogu-B3834，长方形面积
 date: 2024-10-26 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级真题练习。为2023年3月一级认证真题，与长方面积构成有关的题目。
