--- a/_posts/2024-10-28-gesp-1-luogu-b3838.md
+++ b/_posts/2024-10-28-gesp-1-luogu-b3838.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题练习(202306)luogu-B3838，时间规划
 date: 2024-10-28 08:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级真题练习。为2023年6月一级认证真题。时间差计算问题。
