--- a/_posts/2024-10-30-gesp-1-luogu-b3864.md
+++ b/_posts/2024-10-30-gesp-1-luogu-b3864.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题练习(202309)luogu-B3864，小明的幸运数
 date: 2024-10-30 20:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级真题练习。为2023年9月一级认证真题。应该是两道题中略难的一道。
