update some posts

--- a/_posts/2025-03-28-gesp-3-luogu-b2109.md
+++ b/_posts/2025-03-28-gesp-3-luogu-b2109.md
@@ -69,12 +69,12 @@ Today is 2021-03-27
 4. 代码实现要点
    - 使用string类型存储输入
    - 使用getline读取含空格的字符串
-   - 判断字符是否为数字：ch >= '0' && ch <= '9'
+   - 判断字符是否为数字：$ch \geq '0' \space \&\& \space ch \leq '9'$
    - 使用计数器统计数字个数
 
 5. 复杂度分析
-   - 时间复杂度：O(n)，n为字符串长度
-   - 空间复杂度：O(1)
+   - 时间复杂度：$O(n)$，$n$为字符串长度
+   - 空间复杂度：$O(1)$
 
 6. 注意事项
    - 输入字符串可能包含空格
