--- a/_posts/2024-09-18-gesp-1-bcqm3010-3012-3019.md
+++ b/_posts/2024-09-18-gesp-1-bcqm3010-3012-3019.md
@@ -12,7 +12,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3010
+## BCQM3010-【例4.1】 交换两个数的位置
 
 ### 题目要求
 
@@ -68,7 +68,7 @@ int main() {
 
 {% include custom/custom-post-content-inner.html %}
 
-## BCQM3012
+## BCQM3012-练4.1 阿布拉1
 
 ### 题目要求
 
@@ -121,7 +121,7 @@ int main() {
 
 ---
 
-## BCQM3019
+## BCQM3019-练5.2 阿布拉2
 
 ### 题目要求
 
