--- a/_posts/2025-08-01-gesp-4-luogu-b3851.md
+++ b/_posts/2025-08-01-gesp-4-luogu-b3851.md
@@ -245,7 +245,7 @@ int main() {
 }
 ```
 
-##### 方法一补充说明
+#### 方法一补充说明
 
 代码中使用了C++标准库中的sort函数来对颜色信息进行排序。在 C++ 中，`sort` 是一个常用的排序函数，定义在头文件 `<algorithm>` 中。它可以用来对数组、`vector` 或其他随机访问容器中的元素进行排序。
 
@@ -488,7 +488,7 @@ int main() {
 }
 ```
 
-##### 方法二补充说明
+#### 方法二补充说明
 
 与方法一相比，除了改用`map`和`pair`替代原结构体实现外，还特意修改了`int_to_hexstr`函数的实现方法。按照逻辑硬搓一个转换函数，减少大家对系统内置函数使用的记忆量。对小学生可能会更“友好”一些，大家按需选用即可。
 
