--- a/_posts/2025-08-01-gesp-4-luogu-b3851.md
+++ b/_posts/2025-08-01-gesp-4-luogu-b3851.md
@@ -5,7 +5,7 @@ date: 2025-08-01 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 函数, 结构体, 多维数组]
+tags: [GESP, C++, 函数, 结构体, 多维数组, 排序]
 categories: [GESP, 四级]
 ---
 GESP C++四级真题，函数、结构体、多维数组等应用练习，难度⭐⭐⭐☆☆。个人认为23年GESP考试设立初期各级考试的题难度都不小，本题应该是四级真题中难度较大的一个。在洛谷也是评定为`普及/提高`。
