add 5 posts tags

--- a/_posts/2024-11-03-gesp-1-luogu-b3847.md
+++ b/_posts/2024-11-03-gesp-1-luogu-b3847.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级模拟练习luogu-B3847，当天的第几秒
 date: 2024-11-03 10:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级模拟练习，时间相关的处理和计算方法。
