--- a/_posts/2024-10-31-gesp-1-luogu-b3922.md
+++ b/_posts/2024-10-31-gesp-1-luogu-b3922.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题练习(202312)luogu-B3922，小杨报数
 date: 2024-10-31 13:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级真题练习。为2023年12月一级认证真题。`for`循环和取余计算应用。
