--- a/_posts/2024-11-02-gesp-1-luogu-b3921.md
+++ b/_posts/2024-11-02-gesp-1-luogu-b3921.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题练习(202312)luogu-B3921，小杨的考试
 date: 2024-11-02 20:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级真题练习。为2023年12月一级认证真题。逻辑计算问题。
