--- a/_posts/2024-11-04-gesp-1-luogu-b3952.md
+++ b/_posts/2024-11-04-gesp-1-luogu-b3952.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题(202403)luogu-B3952，小杨买书
 date: 2024-11-03 10:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 2024年3月GESP一级真题。基础运算应用。
