add 5 posts tags

--- a/_posts/2024-11-05-gesp-1-luogu-b4000.md
+++ b/_posts/2024-11-05-gesp-1-luogu-b4000.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题(202406)luogu-B4000，休息时间
 date: 2024-11-05 21:10 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 2024年6月GESP一级真题。又是时间计算类问题。
