--- a/_posts/2024-11-08-gesp-1-luogu-b3993.md
+++ b/_posts/2024-11-08-gesp-1-luogu-b3993.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级模拟luogu-B3993，明日复明日
 date: 2024-11-08 08:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 2024年GESP一级模拟题，日期、时间计算题。
