--- a/_posts/2024-11-09-gesp-1-luogu-b4035.md
+++ b/_posts/2024-11-09-gesp-1-luogu-b4035.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题 luogu-B4035[GESP202409 一级] 美丽数字
 date: 2024-11-10 20:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 2024年GESP一级真题，循环应用的问题。
