--- a/_posts/2025-08-01-gesp-4-luogu-b3851.md
+++ b/_posts/2025-08-01-gesp-4-luogu-b3851.md
@@ -345,7 +345,7 @@ Bob 85
 
 ***注意事项：***
 
-- `sort` 使用的是 **快速排序（IntroSort）**，平均时间复杂度为 **O(n log n)**。
+- `sort` 使用的是 **快速排序（IntroSort）**，平均时间复杂度为 $O(n \log n)$。
 - 适用于 **随机访问迭代器（如 `vector`, 数组）**，不适用于 `list`（可用 `list.sort()`）。
 - 若你要排序的区间较大，建议传入比较函数以提高控制力。
 
