--- a/_posts/2024-11-07-gesp-1-luogu-b4001.md
+++ b/_posts/2024-11-07-gesp-1-luogu-b4001.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题(202406)luogu-B4001，立方数
 date: 2024-11-07 22:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 2024年6月GESP一级真题。循环类问题。
