--- a/_posts/2024-11-09-gesp-1-luogu-b4034.md
+++ b/_posts/2024-11-09-gesp-1-luogu-b4034.md
@@ -4,7 +4,7 @@ title: 【GESP】C++一级真题 luogu-B4034 [GESP202409 一级] 小杨购物
 date: 2024-11-09 10:00 +0800
 author: OneCoder
 comments: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 2024年9月 GESP一级真题，简单的运算问题。
