add 5 posts tags

--- a/_posts/2024-11-12-gesp-1-luogu-b3659.md
+++ b/_posts/2024-11-12-gesp-1-luogu-b3659.md
@@ -5,7 +5,7 @@ date: 2024-11-12 21:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 属于GESP一级知识点循环语句应用的题目，在输入处理上增加了一点点难度。
