--- a/_posts/2024-11-16-gesp-2-luogu-b2056.md
+++ b/_posts/2024-11-16-gesp-2-luogu-b2056.md
@@ -5,7 +5,7 @@ date: 2024-11-16 20:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 数据类型转换]
 categories: [GESP, 二级]
 ---
 涉及二级知识点强制类型转换，主要还是一级知识点for循环练习。
