--- a/_posts/2024-11-13-gesp-1-luogu-b2068.md
+++ b/_posts/2024-11-13-gesp-1-luogu-b2068.md
@@ -5,7 +5,7 @@ date: 2024-11-13 22:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 属于GESP一级知识点，整除、取余和循环语句综合练习。
