--- a/_posts/2024-11-15-gesp-2-luogu-b2054.md
+++ b/_posts/2024-11-15-gesp-2-luogu-b2054.md
@@ -5,7 +5,7 @@ date: 2024-11-15 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 数据类型转换]
 categories: [GESP, 二级]
 ---
 二级知识点强制数据类型转换，以及一级知识点循环和基础运算问题。
