--- a/_posts/2024-11-16-gesp-1-luogu-b2055.md
+++ b/_posts/2024-11-16-gesp-1-luogu-b2055.md
@@ -5,7 +5,7 @@ date: 2024-11-16 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点for循环和输入输出格式知识点应用。
