new post gesp-5-syllabus-2-simu

--- a/_posts/2025-03-29-gesp-3-luogu-b2111.md
+++ b/_posts/2025-03-29-gesp-3-luogu-b2111.md
@@ -66,8 +66,8 @@ yes
    - 将计算出的比例与阈值比较，大于等于阈值输出"yes"，否则输出"no"
 
 4. 时间复杂度分析：
-   - 只需要遍历一次DNA序列，时间复杂度为O(n)，其中n为序列长度
-   - 空间复杂度为O(1)，只需要存储几个变量
+   - 只需要遍历一次DNA序列，时间复杂度为$O(n)$，其中$n$为序列长度
+   - 空间复杂度为$O(1)$，只需要存储几个变量
 
 {% include custom/custom-post-content-inner.html %}
 
