add 5 posts tags

--- a/_posts/2024-11-17-gesp-1-luogu-b2057.md
+++ b/_posts/2024-11-17-gesp-1-luogu-b2057.md
@@ -5,7 +5,7 @@ date: 2024-11-17 18:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级练习，寻找一组数的最大值。是一个基础算法逻辑，在后面的题中会有大量的应用。
