--- a/_posts/2024-11-17-gesp-1-luogu-b2069.md
+++ b/_posts/2024-11-17-gesp-1-luogu-b2069.md
@@ -5,7 +5,7 @@ date: 2024-11-17 22:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级练习，难度提升了一些。根据规律，构造数列计算。
