--- a/_posts/2024-11-18-gesp-1-luogu-b2071.md
+++ b/_posts/2024-11-18-gesp-1-luogu-b2071.md
@@ -5,7 +5,7 @@ date: 2024-11-18 22:40 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点`while`循环和取余计算基础练习。
