--- a/_posts/2024-11-18-gesp-1-luogu-b2090.md
+++ b/_posts/2024-11-18-gesp-1-luogu-b2090.md
@@ -5,7 +5,7 @@ date: 2024-11-18 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级综合练习，在一级题目中应该属于小有难度的。
