update summary and 5 posts tags

--- a/_posts/2024-11-19-gesp-1-luogu-b2032.md
+++ b/_posts/2024-11-19-gesp-1-luogu-b2032.md
@@ -5,7 +5,7 @@ date: 2024-11-19 23:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 本篇文章将带你探索一个简单的等差数列问题，通过通项公式求出等差数列末项。
