--- a/_posts/2024-11-18-gesp-1-luogu-b3648.md
+++ b/_posts/2024-11-18-gesp-1-luogu-b3648.md
@@ -5,7 +5,7 @@ date: 2024-11-18 14:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 穿插了一道很简单的题，小朋友热热手，恢复一下信心。
