--- a/_posts/2024-11-19-gesp-1-luogu-b2058.md
+++ b/_posts/2024-11-19-gesp-1-luogu-b2058.md
@@ -5,7 +5,7 @@ date: 2024-11-19 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点循环和求和练习。
