--- a/_posts/2024-11-19-gesp-1-luogu-b2059.md
+++ b/_posts/2024-11-19-gesp-1-luogu-b2059.md
@@ -5,7 +5,7 @@ date: 2024-11-19 17:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点，for循环和取余操作基础练习。
