--- a/_posts/2025-08-05-gesp-4-luogu-b3870.md
+++ b/_posts/2025-08-05-gesp-4-luogu-b3870.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 函数, 位运算]
 categories: [GESP, 四级]
 ---
-GESP C++四级真题，函数、位运算等应用，难度⭐⭐★☆☆。个人认为23年GESP考试设立初期各级考试的题难度相对较高，本题在洛谷评定为`普及-`。
+GESP C++四级2023年9月真题，函数、位运算等应用，难度⭐⭐★☆☆。个人认为23年GESP考试设立初期各级考试的题难度相对较高，本题在洛谷评定为`普及-`。
 
 <!--more-->
 
