--- a/_posts/2025-08-05-gesp-4-luogu-b3870.md
+++ b/_posts/2025-08-05-gesp-4-luogu-b3870.md
@@ -136,7 +136,27 @@ CE 96 C8 A6 F4 CB B6 DA 0D
 
 这种方法的优点是运算效率高，不需要进行字符串转换。缺点是位运算的代码相对理解起来有难度。
 
-两种方法都能正确解决问题，但在实际应用中，建议尽量理解和使用方法二，因为其执行效率更高，且在处理大数据时更有优势。
+#### 算法复杂度分析
+
+方法一：二进制字符串处理
+
+- **时间复杂度**: $O(\log n)$，$n$ 为正整数的值。
+  - 将十进制数转换为二进制字符串需要 $O(\log n)$ 次除法运算
+  - 字符串分组和处理需要遍历整个二进制字符串，长度为 $O(\log n)$
+  - 每组转换为十六进制输出是常数时间 $O(1)$
+- **空间复杂度**: $O(\log n)$
+  - 需要存储二进制字符串，长度为 $O(\log n)$
+  - 存储结果数组，大小为 $O(\log n / 7) \approx O(\log n)$
+
+方法二：位运算处理
+
+- **时间复杂度**: $O(\log n)$
+  - 每次右移7位，总共需要 $O(\lfloor \log n / 7 \rfloor) \approx O(\log n)$ 次操作
+  - 每次位运算和十六进制转换是常数时间 $O(1)$
+- **空间复杂度**: $O(\log n)$
+  - 只需要存储结果数组，大小为 $O(\lfloor \log n / 7 \rfloor) \approx O(\log n)$
+
+虽然两种方法的渐进复杂度相同，且能正确解决问题，但在实际应用中，建议尽量理解和使用方法二，因为其执行效率更高，且在处理大数据时更有优势。
 
 {% include custom/custom-post-content-inner.html %}
 
