--- a/_posts/2024-11-22-gesp-2-luogu-b2094.md
+++ b/_posts/2024-11-22-gesp-2-luogu-b2094.md
@@ -5,7 +5,8 @@ date: 2024-11-22 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
+
 categories: [GESP, 二级]
 ---
 二级知识点，分支/循环嵌套知识点练习。可能实现方法上未必一定需要嵌套，但是题目难度上我觉得应该可以算二级水平。
