--- a/_posts/2025-03-30-gesp-3-luogu-b2112.md
+++ b/_posts/2025-03-30-gesp-3-luogu-b2112.md
@@ -62,22 +62,19 @@ Player2
 
 #### 解题思路
 
-1. 题目要求比较两条DNA序列的相关性，通过计算相同碱基对的比例与给定阈值比较来判断。
+题目要求判断石头剪子布游戏的胜负结果。
 
-2. 解题关键点：
-   - 需要统计两条DNA序列中相同位置相同碱基的数量
-   - 计算相同碱基对占总碱基对的比例
-   - 将比例与给定阈值进行比较
+1. 具体步骤：
+   - 首先读取总游戏轮数N
+   - 循环N次，每次读取两位玩家的选择（Rock/Paper/Scissors）
+   - 根据游戏规则（石头打剪刀，布包石头，剪刀剪布）判断胜负
+   - 如果两人选择相同则平局，输出"Tie"
+   - 根据判断结果输出"Player1"或"Player2"
 
-3. 具体思路：
-   - 输入阈值和两条DNA序列
-   - 遍历两条序列，统计相同位置相同碱基的数量
-   - 计算相同碱基对的比例（相同碱基对数量/总碱基对数量）
-   - 将计算出的比例与阈值比较，大于等于阈值输出"yes"，否则输出"no"
-
-4. 时间复杂度分析：
-   - 只需要遍历一次DNA序列，时间复杂度为O(n)，其中n为序列长度
-   - 空间复杂度为O(1)，只需要存储几个变量
+2. 时间复杂度分析：
+   - 需要处理$N$轮游戏，每轮游戏的判断是常数时间
+   - 时间复杂度为$O(N)$，其中N为游戏轮数
+   - 空间复杂度为$O(1)$，只需要存储当前轮次的选择
 
 {% include custom/custom-post-content-inner.html %}
 
